--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
     </filter-mapping>
 
     <welcome-file-list>
-        <welcome-file>/view/index.html</welcome-file>
+        <welcome-file>/WEB-INF/view/index.html</welcome-file>
     </welcome-file-list>
 
 </web-app>
