--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 validationQuery=select 1 
 driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/mybatis_test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_url=jdbc:mysql://localhost:3306/mybatis_test?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc_username=jocker
 jdbc_password=123456
