--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,14 +8,32 @@
          version="3.1">
     <display-name>Archetype Created Web Application</display-name>
 
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:./mybatis-config.xml</param-value>
+        <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
-
-    <!--<listener>-->
-        <!--<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
-    <!--</listener>-->
 
     <servlet>
         <servlet-name>mvc-dispatcher</servlet-name>
@@ -24,7 +42,7 @@
         <init-param>
             <!--设置参数-->
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:./spring-mvc.xml</param-value>
+            <param-value>classpath:spring-mvc.xml</param-value>
         </init-param>
         <!--<load-on-startup>1</load-on-startup>加载优先级-->
     </servlet>
@@ -34,19 +52,6 @@
         <!--mvc-dispatcher拦截所有的请求-->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
-    <filter>
-        <filter-name>encodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>encodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 
     <welcome-file-list>
         <welcome-file>/WEB-INF/view/index.html</welcome-file>
